# src/routes/users.ts
@@ -1,23 +1,22 @@
 import { Router } from 'express';
 import { UserController } from '@/controllers/users';
-import { CreateUserDto } from '@dtos/users.dto';
 import { Routes } from '@interfaces/routes.interface';
-import { ValidationMiddleware } from '@middlewares/validation.middleware';
+import { AuthController } from '@/controllers/auth';
 
 export class UserRoute implements Routes {
   public path = '/users';
   public router = Router();
   public user = new UserController();
+  public auth = new AuthController();
 
   constructor() {
     this.initializeRoutes();
   }
 
   private initializeRoutes() {
-    this.router.get(`${this.path}`, this.user.getUsers);
-    this.router.get(`${this.path}/:id`, this.user.getUserById);
-    this.router.post(`${this.path}`, ValidationMiddleware(CreateUserDto), this.user.createUser);
-    this.router.put(`${this.path}/:id`, ValidationMiddleware(CreateUserDto, true), this.user.updateUser);
-    this.router.delete(`${this.path}/:id`, this.user.deleteUser);
+    this.router.get(`${this.path}`, this.auth.checkToken, this.user.getUsers);
+    this.router.post(`${this.path}`, this.user.createUser);
+    this.router.put(`${this.path}`, this.auth.checkToken, this.user.updateUser);
+    this.router.put(`${this.path}/change-password`, this.auth.checkToken, this.user.changePassword);
   }
 }
