# src/server.ts
@@ -1,11 +1,12 @@
 import { App } from '@/app';
 import { UserRoute } from '@/routes/users';
 import { ValidateEnv } from '@utils/validateEnv';
-import { ProductRoute } from './routes/products';
-import { EventRoute } from './routes/events';
+import { AuthRoute } from './routes/auth';
+import { MediaRoute } from './routes/media';
+import { ArticleRoute } from './routes/articles';
 
 ValidateEnv();
 
-const app = new App([new UserRoute(), new ProductRoute(), new EventRoute()]);
+const app = new App([new UserRoute(), new AuthRoute(), new MediaRoute(), new ArticleRoute()]);
 
 app.listen();
